<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCalculation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_zero">0</string>
    <string name="num_dec">.</string>	
    
    <string name="op_flip">±</string>
    <string name="op_backsps">«</string>
    <string name="op_plus">+</string>
    <string name="op_minus">-</string>
    <string name="op_divide">/</string>
    <string name="op_mul">*</string>
    <string name="op_eq">=</string>
    <string name="op_cleare">C</string>
    

</resources>
