<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/SkyBlue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mycalculation.MainActivity" >

<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/num_zero"
        android:textSize="60sp"
        android:paddingRight="10dp"
        android:gravity="right"
        android:height="90dp"
        android:typeface="normal"
        android:layout_marginTop="40sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10sp"
        android:id="@+id/numdisply"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:rowCount="6"
        android:columnCount="4"
        >
        
        <Button
            android:text="@string/op_backsps"
            android:id="@+id/ButBck"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/button_style"
            />

        <Button
            android:text="@string/op_flip"
            android:id="@+id/ButFlip"
            android:layout_row="0"
            android:layout_column="2"
            style="@style/button_style"/>

        <Button
            android:text="@string/op_plus"
            android:id="@+id/Butadd"
            android:layout_row="0"
            android:layout_column="3"
            style="@style/button_style"/>

        <Button
            android:text="@string/num_nine"
            android:id="@+id/But9"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/button_style"
            />

        <Button
            android:id="@+id/But8"
            android:text="@string/num_eight"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/button_style"/>

        <Button
            android:text="@string/num_seven"
            android:id="@+id/But7"
            android:layout_row="1"
            android:layout_column="2"
            style="@style/button_style"/>

        

        <Button
            android:text="@string/num_six"
            android:id="@+id/But6"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/num_five"
            android:id="@+id/But5"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/num_four"
            android:id="@+id/But4"
            android:layout_row="2"
            android:layout_column="2"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/op_minus"
            android:id="@+id/Butsub"
            android:layout_row="1"
            android:layout_column="3"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/num_three"
            android:id="@+id/But3"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/num_two"
            android:id="@+id/But2"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/num_one"
            android:id="@+id/But1"
            android:layout_row="3"
            android:layout_column="2"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/op_mul"
            android:id="@+id/Butmul"
            android:layout_row="2"
            android:layout_column="3"
            style="@style/button_style"/>
        
        
        
        <Button
            android:text="@string/op_eq"
            android:id="@+id/Buteq"
            android:layout_row="4"
            android:layout_column="3"
            style="@style/button_style"/>
        
        <Button
            android:text="@string/op_divide"
            android:id="@+id/Butdiv"
            android:layout_row="3"
            android:layout_column="3"
            style="@style/button_style"/>

        <Button
            android:text="@string/num_zero"
            android:id="@+id/But0"
            style="@style/button_style"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/ButDec"
            style="@style/button_style"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="left"
            android:text="@string/num_dec" />

        <Button
            android:id="@+id/ButC"
            style="@style/button_style"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/op_cleare" />

    </GridLayout>

</LinearLayout>